<resources>
    <string name="app_name">My Application</string>
    <string name="sub">SUB</string>
    <string name="add">ADD</string>
    <string name="go">GO!</string>
    <string name="play_again">Play Again</string>
    <string name="_0_0">0/0</string>
    <string name="_14">14</string>
    <string name="_31_7">31+ 7</string>
    <string name="correct">Correct!</string>
    <string name="_30s">30s</string>
    <string name="home">HOME</string>
</resources>
